# AiDocPlus-Main

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: build.yml
.windsurf/workflows/: add-ai-provider.md  add-ppt-theme.md  add-project-template.md  assemble.md  create-plugin.md
apps/desktop/: PANDOC_SETUP.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai.rs  config.rs  document.rs  error.rs  main.rs  plugin.rs  project.rs  resource_engine.rs  template.rs  tools.rs  workspace.rs
apps/desktop/src-tauri/src/commands/: ai.rs  document.rs  email.rs  export.rs  file_system.rs  import.rs  mod.rs  pandoc.rs  plugin.rs  project.rs  resource.rs  search.rs  template.rs  workspace.rs
apps/desktop/src-tauri/src/native_export/: docx.rs  html.rs  mod.rs  pdf.rs  styles.rs  txt.rs
apps/desktop/src-tauri/tests/: test_pandoc_export.rs
apps/desktop/src-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src-ui/src/: App.tsx  index.css  main.tsx
apps/desktop/src-ui/src/hooks/: useMenuEvents.ts  useWorkspaceAutosave.ts
apps/desktop/src-ui/src/i18n/: i18n.ts  index.ts
apps/desktop/src-ui/src/lib/: isTauri.ts
apps/desktop/src-ui/src/plugins/: PluginCard.tsx  PluginManagerPanel.tsx  PluginMenu.tsx  PluginToolArea.tsx  constants.ts  env.d.ts  fragments.ts  i18n-loader.ts  loader.ts  pluginStore.ts  types.ts  (+1 more)
scripts/: assemble.sh  deploy.sh  download-pandoc.sh
(+64 files in other folders)
